[tool.poetry]
name = "pyhton-sapling"
version = "0.1.0"
description = ""
authors = ["edmamerto"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
test = "run_tests:main"
main = "main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
